cod-tools (unreleased)

  * Changed:
    - COD::CIF::DDL:
        - setting data item '_units.code' value 'none' for data items
          without explicit units.
        - implemented partial handling of the '_list_reference' data item in
          the ddl1_to_ddlm() subroutine.
        - updated the ddl1_to_ddlm() subroutine to output DDLm dictionaries
          that conform to DDLm reference dictionary version 4.1.0.
    - COD::CIF::DDL::DDLm::Validate:
        - updated the 'Symop' content type validation logic in accordance to
          the changes in the DDLm reference dictionary version 4.2.0.
  * Fixed:
    - COD::CIF::DDL:
        - ensured that the same date is set to both the '_dictionary.date' data
          item and the most recent entry in the DICTIONARY_AUDIT loop.
        - ensured that the automatically generated dictionary version adheres
          to the requirements of the DDLm 'Version' data type.
        - the description of the '--imports' option in the help message.

cod-tools (3.8.0)

  * Added:
    - COD::AtomProperties assembler:
        - covalent radii from Lang and Smith (2014).
        - covalent radii from Zhang (2018).
    - COD::CIF::Data::Check:
        - the check_unquoted_strings() subroutine.
    - COD::CIF::DDL::DDLm:
        - the get_type_source() subroutine.
    - cif_cod_check:
        - the '--check-unquoted-strings' option.
    - cif_molecule:
        - copying '_chemical_name_common', '_chemical_name_systematic' and
          '_chemical_name_mineral' CIF data items from input files to output.
    - dependency installers for Fedora 37, Fedora 38 and Fedora 39.
    - dependency installer for Debian 12.
    - dependency installer for Ubuntu 22.04.
    - COD::Spacegroups::Lookup::COD:
        - four more non-standard space group settings:
            - H-M symbols: 'P 4 21 2 (a-1/4,b+1/4,c)', 'C 2 2 21 (a,b,c+1/4)',
                           'P 21 21 21 (a+1/4,b-1/4,c)', 'P 42/m m c'.