@@ -1,0 +1,114 @@
+##############################################################################
+#                                                                            #
+#                 DDL1 DEFINITIONS USED FOR TESTING PURPOSES                 #
+#                 ------------------------------------------                 #
+#                                                                            #
+# This dictionary contains definition which specify a parent data item using #
+# the _list_link_parent data item.                                           #
+##############################################################################
+
+data_on_this_dictionary
+    _dictionary_name            parent_item_test.dic
+    _dictionary_version         0.001
+    _dictionary_update          2023-11-21
+    _dictionary_history
+;
+    2023-11-21                  Initial release of the dictionary.
+;
+
+data_looped_category_A_[]
+    _name                      '_looped_category_A_[]'
+    _category                    category_overview
+    _type                        null
+    _definition
+;
+ A looped category with a simple key that consists of a single data item.
+;
+
+data_looped_category_A_key_item
+    _name                      '_looped_category_A_key_item'
+    _category                    looped_category_A
+    _type                        char
+    _list                        yes
+    _list_mandatory              yes
+    _definition
+;
+  Data item that serves as the key of the LOOPED_CATEGORY_A category.
+;
+
+data_looped_category_A_regular_item_1
+    _name                      '_looped_category_A_regular_item_1'
+    _category                    looped_category_A
+    _type                        char
+    _list                        yes
+    _list_reference             '_looped_category_A_key_item'
+    _definition
+;
+  Data item that belongs to the LOOPED_CATEGORY_A category.
+;
+
+data_looped_category_B_[]
+    _name                      '_looped_category_B_[]'
+    _category                    category_overview
+    _type                        null
+    _definition
+;
+ A looped category with a simple key that consists of a single data item
+;
+
+data_looped_category_B_key_item
+    _name                      '_looped_category_B_key_item'
+    _category                    looped_category_B
+    _type                        char
+    _list                        yes
+    _list_mandatory              yes
+    _list_link_parent            '_looped_category_A_key_item'
+    _definition
+;
+  Data item that serves as the key of the LOOPED_CATEGORY_B category and
+  has data item '_looped_category_A_key_item' as its parent.
+;
+
+data_looped_category_B_regular_item_1
+    _name                      '_looped_category_B_regular_item_1'
+    _category                    looped_category_B
+    _type                        char
+    _list                        yes
+    _list_reference             '_looped_category_B_key_item'
+    _definition
+;
+  Data item that belongs to the LOOPED_CATEGORY_B category.
+;
+
+data_looped_category_C_[]
+    _name                      '_looped_category_C_[]'
+    _category                    category_overview
+    _type                        null
+    _definition
+;
+ A looped category with a simple key that consists of a single data item
+;
+
+data_looped_category_C_key_item
+    _name                      '_looped_category_C_key_item'
+    _category                    looped_category_C
+    _type                        char
+    _list                        yes
+    _list_mandatory              yes
+    _list_link_parent            '_looped_category_B_key_item'
+    _definition
+;
+  Data item that serves as the key of the LOOPED_CATEGORY_C category and
+  has data item '_looped_category_B_key_item' as its parent.
+;
+
+data_looped_category_C_regular_item_1
+    _name                      '_looped_category_C_regular_item_1'
+    _category                    looped_category_C
+    _type                        char
+    _list                        yes
+    _list_reference             '_looped_category_C_key_item'
+    _definition
+;
+  Data item that belongs to the LOOPED_CATEGORY_C category.
+;
