@@ -1,0 +1,152 @@
+#\#CIF_2.0
+data_PARENT_ITEM_TEST
+_dictionary.title                PARENT_ITEM_TEST
+_dictionary.version              0.0.1+DDL1-version.0.001
+_dictionary.date                 2023-11-21
+_dictionary.class                Instance
+_dictionary.ddl_conformance      4.1.0
+loop_
+_dictionary_audit.version
+_dictionary_audit.date
+_dictionary_audit.revision
+0.0.1+DDL1-version.0.001 2023-11-21
+;
+Automatically converted from DDL1 to DDLm.
+
+History of the original DDL1 dictionary:
+
+    2023-11-21                  Initial release of the dictionary.
+;
+save_category_overview
+_definition.id                   CATEGORY_OVERVIEW
+_definition.class                Head
+_definition.scope                Category
+_name.object_id                  CATEGORY_OVERVIEW
+_name.category_id                PARENT_ITEM_TEST
+save_
+save_looped_category_A
+_name.category_id                CATEGORY_OVERVIEW
+_description.text
+;
+ A looped category with a simple key that consists of a single data item.
+;
+_definition.update               2023-11-21
+_definition.class                Loop
+_definition.scope                Category
+_definition.id                   LOOPED_CATEGORY_A
+_name.object_id                  LOOPED_CATEGORY_A
+_category_key.name               '_looped_category_A_key_item'
+save_
+save_looped_category_A_key_item
+_name.category_id                looped_category_A
+_list_mandatory                  yes
+_description.text
+;
+  Data item that serves as the key of the LOOPED_CATEGORY_A category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_looped_category_A_key_item'
+_name.object_id                  '_looped_category_A_key_item'
+save_
+save_looped_category_A_regular_item_1
+_name.category_id                looped_category_A
+_description.text
+;
+  Data item that belongs to the LOOPED_CATEGORY_A category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_looped_category_A_regular_item_1'
+_name.object_id                  '_looped_category_A_regular_item_1'
+save_
+save_looped_category_B
+_name.category_id                CATEGORY_OVERVIEW
+_description.text
+;
+ A looped category with a simple key that consists of a single data item
+;
+_definition.update               2023-11-21
+_definition.class                Loop
+_definition.scope                Category
+_definition.id                   LOOPED_CATEGORY_B
+_name.object_id                  LOOPED_CATEGORY_B
+_category_key.name               '_looped_category_B_key_item'
+save_
+save_looped_category_B_key_item
+_name.category_id                looped_category_B
+_list_mandatory                  yes
+_name.linked_item_id             '_looped_category_A_key_item'
+_description.text
+;
+  Data item that serves as the key of the LOOPED_CATEGORY_B category and
+  has data item '_looped_category_A_key_item' as its parent.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_type.purpose                    Link
+_definition.id                   '_looped_category_B_key_item'
+_name.object_id                  '_looped_category_B_key_item'
+save_
+save_looped_category_B_regular_item_1
+_name.category_id                looped_category_B
+_description.text
+;
+  Data item that belongs to the LOOPED_CATEGORY_B category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_looped_category_B_regular_item_1'
+_name.object_id                  '_looped_category_B_regular_item_1'
+save_
+save_looped_category_C
+_name.category_id                CATEGORY_OVERVIEW
+_description.text
+;
+ A looped category with a simple key that consists of a single data item
+;
+_definition.update               2023-11-21
+_definition.class                Loop
+_definition.scope                Category
+_definition.id                   LOOPED_CATEGORY_C
+_name.object_id                  LOOPED_CATEGORY_C
+_category_key.name               '_looped_category_C_key_item'
+save_
+save_looped_category_C_key_item
+_name.category_id                looped_category_C
+_list_mandatory                  yes
+_name.linked_item_id             '_looped_category_B_key_item'
+_description.text
+;
+  Data item that serves as the key of the LOOPED_CATEGORY_C category and
+  has data item '_looped_category_B_key_item' as its parent.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_type.purpose                    Link
+_definition.id                   '_looped_category_C_key_item'
+_name.object_id                  '_looped_category_C_key_item'
+save_
+save_looped_category_C_regular_item_1
+_name.category_id                looped_category_C
+_description.text
+;
+  Data item that belongs to the LOOPED_CATEGORY_C category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_looped_category_C_regular_item_1'
+_name.object_id                  '_looped_category_C_regular_item_1'
+save_
