@@ -2,10 +2,11 @@ cod-tools (unreleased)
 
   * Changed:
     - COD::CIF::DDL:
-        - setting data item '_units.code' value 'none' for data items
+        - started setting data item '_units.code' value 'none' for data items
           without explicit units.
         - implemented partial handling of the '_list_reference' data item in
           the ddl1_to_ddlm() subroutine.
+        - implemented handling of the '_list_link_parent' data item.
         - updated the ddl1_to_ddlm() subroutine to output DDLm dictionaries
           that conform to DDLm reference dictionary version 4.1.0.
     - COD::CIF::DDL::DDLm::Validate:
